# robotic_notes

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README.md.orig  docker-compose.yml  run_ci_local.sh  vcpkg.json
.github/workflows/: build.yml
docs/: README.md  aerial_robotics.md  apriltag.md  apriltag_vs_aruco.md  automatic_differentiation_forward_mode_dual_number.ipynb  bayes_filter.ipynb  ceres.ipynb  coordinate_frame_conventions.ipynb  differential_drive_robots_and_wheel_odometry.ipynb  differential_drive_robots_and_wheel_odometry.md  edge_aware_depth_smoothness.ipynb  ekf.ipynb  error_estate_extended_kalman_filter_vio.ipynb  error_state_extended_kalman_filter_vio.ipynb  extended_kalman_filter.ipynb  factor_graph.ipynb  factor_graph_gtsam_isam2.ipynb  frame_representation.md  g2o.md  gaussian_splatting.md  gazebo.md  geometry_transformation.md  gradio_rerun_viewer.md  imu.ipynb  imu.md  instant_ngp.md  isaac_sim.md  joystick.md  kalibr.md  kalman_filter.ipynb  lidar_and_imu.md  lie_group_lie_algebra.ipynb  lie_groups_se2.ipynb  map.ipynb  mars_logger.md  noah_snavely_reprojection_error.ipynb  nonlinear_least_squares.ipynb  nonlinear_uncertainty_model_associated_with_robot_position_banana_shape_.ipynb  open_vins.md  photometric_loss_mathematics.md  (+24 more)
docs/.ipynb_checkpoints/: non_holonomic_pfaffian_constraint-checkpoint.ipynb
docs/data/: april_6x6.yaml  imu.yaml
docs/imu/: imu.ipynb
docs/lie_group_lie_algebra/: index.ipynb
docs/match_anything/: index.ipynb  index.py
docs/slam/: GTSAM.md  Lidar_and_IMU.md  NeRF-SLAM.md  VIO.md  active_exposure_control_HDR_environments.md  ceres.ipynb  differential_drive_robots_kinematics.md  factor_graph.md  factor_graph_SLAM.ipynb  factor_graph_gtsam_isam2.ipynb  factor_graph_vs_pose_graph.md  frame_representation_quaternions.md  g2o.md  graph_slam.md  lidar_and_imu.md  loop_closure.md  manif.ipynb  noah_snavely_reprojection_error.ipynb  nonlinear_uncertainty_model_associated_with_robot_position_banana_shape_.ipynb  open_drone_map.md  pose_graph_slam.ipynb  pose_graph_slam.md  se2_localization.ipynb  se2_sam.ipynb  sfm.ipynb  slam.md  visual_Inertial_SLAM_comparison.md
docs/slam_assets/: create_pipeline_diagram.py  explain_poses.py
docs/visual_odometry/: KITTI.ipynb  train.py  vit_monocular_vo.ipynb
docs/vit_monocular_vision/: vit_monocular_vo.ipynb
launch/: complete_model.launch  display.launch
lio_benchmark/: .gitignore  README.md
lio_benchmark/docs/: PERFORMANCE.md
lio_benchmark/src/explorer_r2_sim/: .dockerignore  CMakeLists.txt  README.md  docker-compose.yml  package.xml
lio_benchmark/src/explorer_r2_sim/config/: bridge.yaml  joy_teleop.yaml  lio.yaml
lio_benchmark/src/explorer_r2_sim/docker/: sim-entrypoint.sh  sim.Dockerfile
lio_benchmark/src/explorer_r2_sim/env/: humble-fortress.env  jazzy-harmonic.env  rolling-ionic.env
lio_benchmark/src/explorer_r2_sim/launch/: cave.launch.py  lio.launch.py  spawn_robot.launch.py  world.launch.py
lio_benchmark/src/explorer_r2_sim/models/explorer_r2/: model.config  model.sdf
lio_benchmark/src/explorer_r2_sim/rviz/: cave.rviz  sim.rviz  vio.rviz
lio_benchmark/src/explorer_r2_sim/scenarios/: README.md
lio_benchmark/src/explorer_r2_sim/scripts/: analyze_bag.py  cmd_vel_smoother_node.py  distro-switch.sh  eval.sh  gt_to_path.py  imu_emulator_node.py  lidar_field_adapter.py  perf_probe.sh  record_run.sh  recording_health.sh  scripted_drive.py
lio_benchmark/src/explorer_r2_sim/worlds/: cave.sdf  tunnel.sdf
ros1/: CMakeLists.txt  package.xml
ros1/config/: diffdrive.yaml
ros1/launch/: gazebo.launch  pose_ekf.launch
ros1/src/: differential_drive_wheel_systems.cpp  talker.cpp  tf2_listener.cpp
ros1/urdf/: gazebo.urdf.xacro  macroed.urdf.xacro
ros2/ros2_qos_examples_cpp/: CMakeLists.txt  README.md  package.xml
ros2/ros2_qos_examples_cpp/src/: camera_publisher.cpp  custom_qos_publisher.cpp  latest_frame_buffer.cpp  latest_frame_subscriber.cpp
ros2/ros2_qos_examples_py/: package.xml  setup.cfg  setup.py
ros2/ros2_qos_examples_py/ros2_qos_examples_py/: camera_publisher.py  latest_frame_subscriber.py
ros2/urdf/: rrbot.urdf  rrbot.xacro
rviz/: urdf.rviz
scripts/: .gitignore  calib_rerun.py  ceres.ipynb  color_grid.py  eskf_vio.py  eskf_vio_numerical.py  euroc_dense_stereo.py  factor_graph.py  factor_graph_gtsam.py  g2o covariance retrieval.ipynb  g2o.ipynb  g2o_pose_graph.py  gradio_block.py  gradio_interface.py  gradio_rerun_minimal.py  gradio_rerun_sample.py  graph_pose_from_scratch.py  graph_pose_from_scratch_ros_publisher.py  load_g2o_gtsam_example.py  loop_closure.py  pose_graph_example.py  pose_slam.py  quaternions_relative_pose.py  rerun_display_images.py  rerun_example.py  rerun_opencv.py  rerun_time_example.py  se2_localization.ipynb  sfm_rerun.py  spectral_analysis.py  variable_elimination.py  virtual_cam_incremental_SfM.py
scripts/.ipynb_checkpoints/: g2o covariance retrieval-checkpoint.ipynb  g2o-checkpoint.ipynb  g2o_file_reader-checkpoint.py  graph_slam-checkpoint.py  nonlinear_uncertainty_model_associated_with_robot_position_banana_shape_-checkpoint.ipynb
scripts/data/: laptop_calib_result_1280x720.xml
scripts/gradio_rerun/: sample.py
scripts/imu/: analyze_sampling_rate.py  attitude_estimation.py  ekf_slam.py  euRoC_dataset.py  euroc_imu_ahrs_rerun.py
scripts/rerun_examples/: camera_ray.py  client.py  gradio-rerun.py  opencv_coordinate_conversion.py  rerun_example.py  rerun_opencv.py  rerun_video_frame_by_frame.py  server.py  video_asset_references.py  video_stream_minimal.py  video_with_animated_camera_position.py  viewer.py  viewer_UI_layout_blueprint.py
scripts/sandbox/: factor_graph.py  main.py  probability_likelihood.py
scripts/structure_from_motion/: __main__.py
src/: bfl_ekf.cpp  collection_adapters.hpp  listener.cpp  snavely_reprojection_error.h  snavely_reprojection_error.hpp  tf2_broadcaster.cpp  transformation.hpp
src/camera_examples/: README.md  SPMC.md  SPMC_RING.md  spmc.cpp  spmc_ring.cpp  (+2 more)
urdf/: first.urdf
vio_benchmark/: .gitignore  .gitmodules  README.md
(+61 files in other folders)
