<?xml version="1.0"?>
<package format="3">
  <name>ros2_qos_examples_cpp</name>
  <version>0.1.0</version>
  <description>QoS demos in C++: SensorDataQoS pub/sub, custom profiles, threaded latest-frame buffer.</description>
  <maintainer email="behnam.asadi@gmail.com">Behnam Asadi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
